--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "html-react-parser": "^5.0.3",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
