--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "html-react-parser": "^5.0.3",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
-    "next-share": "^0.27.0",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-froala-wysiwyg": "^4.1.3",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
