--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^40.0.0",
-    "@ckeditor/ckeditor5-react": "^6.1.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
@@ -27,9 +27,14 @@
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.38.2",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "axios": "^1.6.1",
+    "ckeditor5-custom-build": "^0.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "froala-editor": "^4.1.3",
     "html-react-parser": "^5.0.3",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
@@ -41,6 +46,8 @@
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
+    "slate": "^0.101.1",
+    "slate-react": "^0.101.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^14.4.0",
     "tailwind-merge": "^1.14.0",
