--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.11",
     "@types/uuid": "^9.0.7",
+    "@wixc3/react-board": "^2.3.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
